--- a/index.html
+++ b/index.html
@@ -40,19 +40,42 @@
             <a href="mailto:hey@jamesmcpherson.design"><button class="btn">Get me to do stuff</button></a>
         </cta>
       </div>
-<cta>
-</section>
 
-
-<footer>
-  <section class="ft-social">
-    <ul class="ft-social-list">
-      <a href="#"><i class="fab fa-linkedin"></i></a></li>
-      <a href="#"><i class="fa-solid fa-envelope"></i></a></li>
-    </ul>
+<section class="skills">
+  <h1>Skills</h1>
+    <div class="flexContainer">
+      <p>
+  User Research<br>
+  Problem Definition<br>
+  Solution Ideation<br>
+  Prototyping<br>
+  User Testing<br>
+  Implementation<br>
+  Leadership<br>
+      </p>
+    </div>
   </section>
-</footer>
 
+
+<section class="work">
+  <h1>Work</h1>
+    <div class="workGrid">
+
+      <div class="caseStudyOne">
+        <img src="images/case_study_one.png">
+      </div>
+
+      <div class="caseStudyTwo">
+        <img src="images/case_study_two.png">
+      </div>
+
+      <div class="caseStudyThree">
+        <img src="images/case_study_three.png">
+      </div>
+
+      <div class="caseStudyFour">
+        <img src="images/case_study_four.png">
+      </div>
 
 </body>
 
